Slides 02: add translation example images

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -28,6 +28,7 @@
 \newcommand{\worldCoordSystem}{\mathrm{W}}
 \newcommand{\bodyCoordSystem}{\mathrm{B}}
 \newcommand{\cameraCoordSystem}{\mathrm{C}}
+\newcommand{\origin}{\vec{o}}
 \newcommand{\point}{\vec{p}}
 \newcommand{\worldPoint}{\toCoord{\point}{\worldCoordSystem}}
 \newcommand{\imagePoint}{\vec{u}}
@@ -55,9 +56,7 @@
 \newcommand{\inverse}[1]{{#1}^{-1}}
 \newcommand{\epipole}{\vec{e}}
 
-
-
-% Localization (State Estiamtion)
+% Localization (State Estimation)
 \newcommand{\state}{x}
 \newcommand{\observation}{z}
 \newcommand{\controlCommand}{u}
