Slides 02: minor changes

--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -137,7 +137,7 @@
     \end{itemize}
     {\bf Desventaja: }
     \begin{itemize}
-        \item Complegidad mecánica
+        \item Complejidad mecánica
         \item Mayor consumo (una pata con muchos joints puede tener que soportar todo el peso del robot)
         \item Para que tenga mucha maniobrabilidad cada pata debe tener muchas juntas.
 \end{itemize}
