--- a/teoricas/teorica_03/src/encoders.tex
+++ b/teoricas/teorica_03/src/encoders.tex
@@ -38,7 +38,7 @@
     \begin{itemize}
         \item Proprioceptivo
         \item La resolución se mide en ciclos por revolución (CPR). Suelen tener 2000 CPR.
-        \item La odometría basada en encoders acumula error rápidamente por diferencias físicas en en las ruedas, deslizamiento o giro en el aire de las ruedas.
+        \item La odometría basada en encoders acumula error rápidamente por diferencias físicas en las ruedas, deslizamiento o giro en el aire de las ruedas.
     \end{itemize}
 \end{frame}
 
