--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -119,19 +119,17 @@
 \begin{frame}
     \frametitle{Cinemática directa de un robot diferencial}
     \scriptsize
-    \begin{figure}[!h]
-        \subfloat[]
+    \begin{center}
         {
             \includegraphics[width=0.2\columnwidth]{./images/differential_drive.pdf}
         }
-        \subfloat[]
         {
             \includegraphics[width=0.15\columnwidth]{./images/wheel_parameters.pdf}
         }
-    \end{figure}
-    
-   El Modelo de cinemática directa de un robot diferencial está dado por
-
+    \end{center}
+    %
+    El Modelo de cinemática directa de un robot diferencial está dado por
+    %
     \begin{equation*}
         \dot{\transform{I}{}} =
         \begin{bmatrix}
@@ -141,13 +139,15 @@
         \end{bmatrix} =
         f\left( l,r,\theta,\dot{\varphi}_{1},\dot{\varphi}_{2}\right)
     \end{equation*}
+    %
     donde
+    %
     \begin{itemize}
         \item $l$ es la distancia de cada rueda al punto $\point$ (punto en el medio del eje de las ruedas).
         \item $r$ es el diámetro de las ruedas.
         \item $\dot{\varphi}_{1}$ y $\dot{\varphi}_{2}$ la velocidad de giro de la rueda derecha e izquierda, respectivamente.
     \end{itemize}
-
+    %
     Podemos calcular el movimiento del robot en el marco de referencia global a partir del movimiento en su marco de referencia local:  $\dot{\transform{I}{}} = \inverse{\rotationCoord{R}{I}}\dot{\transform{R}{}}$. Por lo tanto, la estrategia será calcular primero la contribución de cada una de las dos ruedas en el marco de referencia local $\dot{\transform{R}{}}$.
 \end{frame}
 
