Slides 04: Add ROS logo

--- a/teoricas/teorica_01/src/tools.tex
+++ b/teoricas/teorica_01/src/tools.tex
@@ -11,7 +11,7 @@
         \item VScode: IDE de desarrollo
         \item Mendeley: manejador de papers
         \item Yed: diagramas
-        \item inkscape: gráficos vectorizados
+        \item inkscape: gráficos vectorizados + plugin \href{TexText}{https://textext.github.io/textext/}
         \item pdfpc: visualizador de slides (hechas en latex)
     \end{itemize}
 \end{frame}
