--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -38,20 +38,13 @@
 
 \begin{frame}
 	\frametitle{¿Qué es ROS?}
-	  Trabajaremos con la versión Ubuntu LTS más actual, esta siempre viene con una versión de ROS estable.
+    Trabajaremos con la versión Ubuntu LTS más actual, esta siempre viene con una versión de ROS estable.
+    \note{ROS 2 distribution released yearly on May 23rd (World Turtle Day).}
 	
-	\begin{figure}[!h]
-		\centering
-		\subfloat[ROS1]
-		{
-			\includegraphics[width=0.3\columnwidth]{images/ros_version_noetic.png}
-		}
-		\subfloat[ROS2]
-		{
-			\includegraphics[width=0.315\columnwidth]{images/ros_version_humble.png}
-		}
-	\end{figure}
-
+    \begin{itemize}
+    \item Distribución ROS1: Noetic
+    \item Distribución actual de ROS2: ver \href{https://docs.ros.org/en/rolling/Releases.html}{https://docs.ros.org/en/rolling/Releases.html}
+    \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]
