Slides 04: minor changes

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -81,7 +81,7 @@ printenv | grep -i ROS
         \begin{lstlisting}[style=bash]
 ROS_VERSION=2
 ROS_PYTHON_VERSION=3
-ROS_DISTRO=humble
+ROS_DISTRO=<distro>
         \end{lstlisting}	
         
         \item Chequear el setup de ROS y problemas potenciales (lista de paquetes instalados, versiones, etc)
