Slides 04: add some URDF notes

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -795,6 +795,11 @@ ros2 run rviz2 rviz2 -d $(ros2 pkg prefix --share turtle_tf2_py)/rviz/turtle_rvi
 		\centering
 		\includegraphics[width=0.8\columnwidth]{images/urdf_driagram.pdf}
 	\end{figure}
+    \note{https://wiki.ros.org/urdf/Tutorials}
+    \note{https://articulatedrobotics.xyz/tutorials/ready-for-ros/urdf/}
+    \note{Parámetro Collision: es utilizado para el cálculo de las colisiones físicas}
+    \note{Parámetro Inertial: se utiliza para cálculos físicos, determina cómo responde el link a las fuerzas.}
+
 \end{frame}
 
 \begin{frame}[fragile]
